  * When used without pre-authentication, the LDAP authenticator now tries to 
    bind by searching for the given username in the LDAP directory based on the 
    configured username_attribute. Prior to this change the authenticator
    attempted to bind with the LDAP server by assuming that the username credential
    matches the user's CN. This is no longer the case.
    
* Bug fixes
  * Fixed logout action to work properly with ActiveRecord 2.1 (eager loading behaviour
    was changed upstream forcing a change to the way we look for ProxyGrantingTickets
    to delete on logout).
  * When running under Mongrel, the USR2 signal should now restart the server as 
    expected -- however currently this only works when the server is running
    in the foregaround. When daemonized, USR2 will shut down the server without
    restarting (see issue #58).

=== 0.6.0 :: 2008-03-28

* Much of the supporting functionality that makes RubyCAS-Server
  act as a well-behaved Linux service has been abstracted out
  into its own library. This new library is called Picnic and is
  now a gem dependency for RubyCAS-Server. You can find out more about
  it at http://code.google.com/p/camping-picnic/.
* The logout action will now accept a 'destination' parameter in lieu of
  'service'. This means that if a 'destination' parameter is given with
  some URL, the logout action will show the login form, allowing the user
  to immedietly log back in to the service specified by 'destination'.
* The logout action will now accept a 'url' parameter. If given, the logout
  page will show a message indicating that the CAS session has been terminated
  and instructing the user to click on a link to follow the given URL. If the
  'url' parameter is given, the login form will NOT be shown on the logout
  page (see above).
* When an authentication failure occurs (because the user submitted
  invalid credentials or the login ticket is missing), the server